objects/Financial_Account_Contact_Link_SFDC2__c.object
<CustomObject>
    <description>SFDC2: Creates a many-to-many junction between Contacts or Person Accounts and Financial Accounts</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>CASESAFEID( Contact__r.Account.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Financial_Account__r.Brand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF_JHA_LINK__c</fullName>
        <description>Combination of CIF and JHA Unique Id for upserting links</description>
        <externalId>true</externalId>
        <label>CIF JHA LINK</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <formula>Contact__r.CIF_SFDC2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>CASESAFEID( Contact__r.Id )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact or Person Account related to this link</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Financial Accounts</relationshipLabel>
        <relationshipName>Financial_Account_Contact_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <formula>Financial_Account__r.Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Balance__c</fullName>
        <formula>Financial_Account__r.Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Department__c</fullName>
        <description>Used to assist in Mortgage Cross Sell automation for Person Accounts</description>
        <formula>TEXT(Financial_Account__r.Department__c)</formula>
        <label>Financial Account Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <label>Financial Account</label>
        <referenceTo>Financial_Account_SFDC2__c</referenceTo>
        <relationshipLabel>Business/Consumer Contacts</relationshipLabel>
        <relationshipName>Financial_Account_Contact_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Last_4_Acct_Number__c</fullName>
        <formula>Financial_Account__r.Account_Number_Last_4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 4 Acct Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <formula>Financial_Account__r.Maturity_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <formula>Financial_Account__r.Open_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <formula>Financial_Account__r.Ownership__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Financial_Account__r.Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Relationship of business contact to financial account</description>
        <label>Relationship</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Financial_Account__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Financial Account Contact Link</label>
    <nameField>
        <displayFormat>FACL-{YYYYMMDD}-{0000}</displayFormat>
        <label>Financial Account Contact Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account Contact Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>